Add support for logging using SLF4J API and Logback (classic) library.

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ assertjVersion=3.20.2
 description=Example of Java language features available in Java 17 (new features introduced since previous Java 11 LTS release).
 group=com.neiljbrown
 junitJupiterVersion=5.7.2
+logbackClassicVersion=1.2.5
 # Set Java source & class versions to use when compiling. Needs to be defined after applying java plugin to take affect
 sourceCompatibility=17
 targetCompatibility=17
