--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
   testImplementation("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
   testImplementation("org.assertj:assertj-core:${assertjVersion}")
+  testImplementation("ch.qos.logback:logback-classic:${logbackClassicVersion}")
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
 }
 
